# simple-vm-rust

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Vagrantfile  test-program
bench/: Cargo.toml
bench/src/: main.rs
benches/: fib.rs
examples/: fib  fib_no_print  loop_until
prof/: Dockerfile  run.sh
src/: bin.rs  error.rs  lib.rs  side_effect.rs  stack_operations.rs
wasm/: Cargo.toml  README.md  index.html  index.js  package-lock.json  simple_vm_wasm.js  simple_vm_wasm_bg.wasm
wasm/src/: lib.rs
