[package]
name = "simple_vm"
version = "0.1.0"
authors = ["Stan Rozenraukh <stan@stanistan.com>"]

[lib]
doctest = false
path = "src/lib.rs"

[profile.release]
debug = true

[features]
# This will print out data about the stack (and return stack)
# _before_ an operation is performed, what the operation is,
# and after it's performed.
#
# If you're using `debug` to run something you'll probably want to
# pipe to `less` as it works because this all goes to stdout and
# will be pretty noisy.
debug = []

# This will enable usage of the `RunStats` struct during `run`,
# which keeps track of how many operations there are and
# the size of the program in memory using "heapsize".
stats = [ "heapsize" ]

# This will print out stats from jemalloc...
mem-usage = [ ]

# for bench marking which uses the nightly compiler
bench = []

[[bin]]
name = "simple_vm"
path = "src/bin.rs"
doc = false

[dependencies]
failure = "0.1.0"
failure_derive = "0.1.0"

heapsize = { version = "0.4.1", optional = true }

