[package]
name = "simple_vm"
version = "0.1.0"
authors = ["Stan Rozenraukh <stan@stanistan.com>"]

[lib]
path = "src/lib.rs"

[profile.release]
# Let's not mangle symbols.
debug = true

[features]
# This will enable usage of the `RunStats` struct during `run`,
# which keeps track of how many operations there are and
# the size of the program in memory using "heapsize".
stats = [ "heapsize" ]

# This will print out stats from jemalloc...
# see src/bin/run.rs
mem-usage = [ ]

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"

heapsize = { version = "0.4.2", optional = true }
